@@ -264,13 +264,6 @@
         </dependency>
 
         <dependency>
-            <groupId>com.sun</groupId>
-            <artifactId>tools</artifactId>
-            <version>1.8</version>
-            <scope>system</scope>
-            <systemPath>C:/Program Files/Java/jdk-1.8/lib/tools.jar</systemPath>
-        </dependency>
-        <dependency>
             <groupId>cn.chauncy</groupId>
             <artifactId>Message</artifactId>
             <version>1.0</version>
@@ -331,6 +324,10 @@
                         -Xmx1024m
                         -Dio.netty.leakDetection.level=PARANOID
                         -agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=5005
+                        --add-modules jdk.attach
+                        --add-modules jdk.compiler
+                        --add-opens java.base/java.lang=ALL-UNNAMED
+                        -Djdk.attach.allowAttachSelf=true
                     </argLine>
                 </configuration>
             </plugin>
